// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stories/styles/GradientBorder Breathe smoke-test 1`] = `
<div class="_container_1ucom_11 _breathe_1ucom_38">
  <div class="_insideBox_1ucom_45">
    GradientBorder
  </div>
</div>
`;

exports[`stories/styles/GradientBorder Colorize smoke-test 1`] = `
<div class="_container_1ucom_11"
     style="--gradient-colors: #f2ff00,#aa00ff,#00ff00,#ff0000,#1900ff,#f2ff00;"
>
  <div class="_insideBox_1ucom_45">
    GradientBorder
  </div>
</div>
`;

exports[`stories/styles/GradientBorder Flow smoke-test 1`] = `
<div class="_container_1ucom_11 _flow_1ucom_32">
  <div class="_insideBox_1ucom_45">
    GradientBorder
  </div>
</div>
`;

exports[`stories/styles/GradientBorder Normal smoke-test 1`] = `
<div class="_container_1ucom_11">
  <div class="_insideBox_1ucom_45">
    GradientBorder
  </div>
</div>
`;
